--- a/src/sass/elements/_transitions.scss
+++ b/src/sass/elements/_transitions.scss
@@ -200,7 +200,6 @@ main [data-testid^="conversation-turn-"] {
 pre {
     button:has(svg) {
         transition:
-            // transform .4s $easeOutBack,
             transform .4s $easeOutBack,
             opacity .3s ease-in-out,
             background-color .2s ease-in-out,
@@ -219,7 +218,6 @@ pre {
 }
 
 html.light pre button:has(svg):hover {
-    // background-color: var(--c-accent) !important;
     color: var(--c-txt) !important;
 }
 
@@ -238,23 +236,6 @@ main [role="presentation"] button.absolute.rounded-full {
 [role="dialog"] table {
 
     tbody {
-
-        /* NAME - first column Links
-        "Shared links" & "Archived Chats" links in table, but a[href^="/c/"] is also Conversation SVG in "Shared Links", ahh */
-        /*  td:first-child a {
-            transform-origin: center center;
-
-            &:hover {
-                color: var(--c-accent) !important;
-                text-decoration: underline;
-                transform: translateX(5px);
-
-                svg {
-                    transform: translateX(-5px) scale(.9) !important;
-                }
-
-            }
-        } */
 
         /* Table column that contains "Delete" svg icon */
         td:has(button[aria-label^="Delete"]) {
